@@ -11,6 +11,8 @@ http://dev.openguides.org/log/trunk
         Removed dependency on Test::MockObject.
         Remove misleading CSS examples
         Support alternative database ports
+        Only display the google maps preference if node maps are enabled
+          (#192).
 
 0.60    13 May 2007
         Removed footer search from edit page (shouldn't have been there).
